--- a/.classpath
+++ b/.classpath
@@ -6,5 +6,9 @@
 	<classpathentry kind="src" path="ADA-Actividad 3"/>
 	<classpathentry kind="src" path="ADA-Actividad 5  26-10-2021"/>
 	<classpathentry kind="src" path="ADA-Actividad 6  02-11-2021"/>
+	<classpathentry kind="src" path="ADA-Actividad 7  09-11-2021"/>
+	<classpathentry kind="src" path="ADA-Actividad 8  16-11-2021"/>
+	<classpathentry kind="src" path="ADA-Actividad 9  30-11-2021"/>
+	<classpathentry kind="src" path="ADA-Actividad 10  07-12-2021"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
